--- a/backend/llvm/test/meson.build
+++ b/backend/llvm/test/meson.build
@@ -1,5 +1,5 @@
 map = executable('map', 'map.c', dependencies: [ llvm_iz_dep_test, cmocka ])
 test('map', map)
 
-codegen = executable('codegen', 'codegen.c', dependencies: [ llvm_iz_dep_test, cmocka ])
-test('codegen', codegen)
+backend = executable('backend', 'llvm/backend.c', dependencies: [ llvm_iz_dep_test, cmocka ])
+test('backend', backend)
