--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,8 @@
-project('iz', ['c', 'cpp'], version: '0.0.1')
+project(
+    'iz',
+    ['c', 'cpp'],
+    version: '0.0.2'
+)
 
 cmocka = dependency('cmocka')
 llvm = dependency('llvm')
@@ -6,4 +10,4 @@ llvm = dependency('llvm')
 subdir('lib')
 subdir('backend')
 subdir('test')
-subdir('samples')
+subdir('src')
