--- a/lib/meson.build
+++ b/lib/meson.build
@@ -1,14 +1,14 @@
-
-
-includes = include_directories([ 'include' ])
+includes = include_directories([ 'src' ])
 
 sources = files(
+    'src/ast/compilation.c',
     'src/ast/declaration.c',
     'src/ast/expression.c',
     'src/ast/statement.c',
     'src/ast/type.c',
     'src/ast/unit.c',
     'src/common/array.c',
+    'src/common/source.c',
     'src/common/span.c',
     'src/parser/lexer.c',
     'src/parser/parser.c',
@@ -16,7 +16,7 @@ sources = files(
     'src/sema/sema.c',
 )
 
-iz = library(
+iz = static_library(
     'iz',
     sources,
     include_directories: includes
@@ -27,10 +27,15 @@ iz_dep = declare_dependency(
     include_directories: includes,
 )
 
+iz_c_args = []
+if get_option('b_coverage')
+    iz_c_args = [ '-DUNIT_TESTING' ]
+endif
+
 iz_test = static_library(
     'izl_test',
     sources,
-    c_args : ['-DUNIT_TESTING' ],
+    c_args : [ iz_c_args ],
     include_directories: includes
 )
 
